# streaming-project

./: .dockerignore  Readme.md  docker-compose.yml  pyproject.toml  remarks.txt
docker/: .dockerignore  Dockerfile_coinbase_producer  Dockerfile_reddit_producer
src/coinbase_producer/: CoinbaseProducer.py  coinbase_producer.py  main.py
src/constants/: Dataclass.py  Enums.py  constants.py
src/generic/: KafkaProducer.py  LoggingDecorator.py  SchemaRegistryClient.py  Serializer.py
src/interfaces/: BaseKafkaProducer.py  BaseStreamProducer.py  BaseWebSocketProducer.py
src/producers/coinbase_producer/: CoinbaseProducer.py  main.py
src/producers/reddit_producer/: RedditProducer.py  main.py
src/python_services/generic/: KafkaProducer.py  LoggingDecorator.py  SchemaRegistryClient.py
src/python_services/interfaces/: BaseStreamProducer.py
src/python_services/producers/coinbase_producer/: CoinbaseProducer.py  main.py
src/python_services/producers/reddit_producer/: RedditProducer.py  main.py
src/reddit_producer/: RedditProducer.py  main.py  reddit_producer.py
